# eleanor_learning_app-

./: README.md  pyproject.toml
config/: languages.json
docs/: sprint-001-architect-report.md  sprint-001-report.md
src/eleanor_learning_app/: __init__.py  __main__.py  app.py  assets.py  config.py  main.py
src/eleanor_learning_app/games/: __init__.py
src/eleanor_learning_app/games/numbers/: __init__.py  logic.py
src/eleanor_learning_app/screens/: __init__.py  language_menu.py  main_menu.py  number_game_screen.py
tests/: test_number_game_logic.py
