[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "eleanor-learning-app"
version = "0.1.0"
description = "A private pygame learning app for early childhood practice."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
